# chigemotsu-monitor

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  pyproject.toml
config/: config.json  line_credentials.json.sample  r2_credentials.json.sample
docs/: CLOUDFLARE_R2_SETUP.md  DEPLOYMENT.md  LINE_CREDENTIALS_SETUP.md  MOTION_INTEGRATION.md  R2_CREDENTIALS_SETUP.md  REFERENCE.md
models/: mobilenet_v2_micro_float32.tflite  mobilenet_v2_tensorflow_float32_20250801.tflite
scripts/: chigemotsu_detect.sh  chigemotsu_pipeline.py  db_manager.py  integrated_detection.py  line_image_notifier.py  r2_uploader.py  resolve_comments.py  run_tests.py  send_daily_summary.py  test_line_notification.py
setup/: install.sh  install_tflite_prebuilt.sh  setup_cron.sh  setup_systemd_timers.sh
static/: ARCHITECTURE.drawio
systemd/: chigemotsu_daily_reboot.service  chigemotsu_daily_reboot.timer  chigemotsu_daily_summary.service  chigemotsu_daily_summary.timer  libcamerify_motion.service
tests/: __init__.py  conftest.py  run_tests.py
tests/integration/: test_db_persistence.py  test_system_integration.py
tests/unit/: test_db_manager.py  test_integrated_detection.py  test_line_image_notifier.py  test_notification_suppression.py  test_r2_uploader.py  test_send_daily_summary.py
tools/: create_tflite_micro_model.py  simple_tflite_converter.py
